refactor(plugins): extract output type plugins
